@@ -2,6 +2,11 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*pclean-0.7 (22 Oct 2010)
+
+  22 Oct 2010; <alunduil@gentoo.org> +pclean-0.7.ebuild:
+  Adding pclean-0.7
+
 *pclean-0.6 (07 Oct 2010)
 
   07 Oct 2010; <alunduil@gentoo.org> +pclean-0.6.ebuild:
